# iscore-addon-csp

./: .gitmodules  CMakeLists.txt  README.md  iscore_addon_csp.cpp  iscore_addon_csp.hpp
CSP/: ApplicationPlugin.cpp  ApplicationPlugin.hpp  CSPApplicationPlugin.cpp  CSPApplicationPlugin.hpp  CSPDisplacementPolicy.cpp  CSPDisplacementPolicy.hpp  CSPDocumentPlugin.cpp  CSPDocumentPlugin.hpp  CSPFlexDisplacementPolicy.cpp  CSPFlexDisplacementPolicy.hpp  DisplacementComputer.cpp  DisplacementComputer.hpp  DisplacementPolicy.cpp  DisplacementPolicy.hpp  DocumentPlugin.cpp  DocumentPlugin.hpp  ExecutionPolicyFactory.cpp  ExecutionPolicyFactory.hpp  FlexDisplacementPolicy.cpp  FlexDisplacementPolicy.hpp  MoveEventCSPFactory.cpp  MoveEventCSPFactory.hpp  MoveEventCSPFlexFactory.cpp  MoveEventCSPFlexFactory.hpp
CSP/Model/: Branch.cpp  Branch.hpp  CSPScenario.cpp  CSPScenario.hpp  CSPTimeNode.cpp  CSPTimeNode.hpp  CSPTimeRelation.cpp  CSPTimeRelation.hpp  Scenario.cpp  Scenario.hpp  TimeNode.cpp  TimeNode.hpp  TimeRelation.cpp  TimeRelation.hpp
CSP/Model/tools/: CSPConstraintHolder.hpp  ConstraintHolder.hpp
CSP/Policies/: DisplacementPolicy.cpp  DisplacementPolicy.hpp  ExecutionPolicy.cpp  ExecutionPolicy.hpp  FlexDisplacementPolicy.cpp  FlexDisplacementPolicy.hpp
CSP/Settings/: Factory.cpp  Factory.hpp  Model.cpp  Model.hpp  Presenter.cpp  Presenter.hpp  View.cpp  View.hpp
